Bugfix, added MD5 for login